Bug 408407 - Mention of KSnapshot isn't relevant now
Summary: Mention of KSnapshot isn't relevant now
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.15.5
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: DemonicSavage
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2019-06-07 08:21 UTC by chimak111
Modified: 2019-06-10 15:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments
Image illustrating the issue reported (103.30 KB, image/png)
2019-06-07 08:21 UTC, chimak111
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chimak111 2019-06-07 08:21:23 UTC
Created attachment 120649 [details]
Image illustrating the issue reported

SUMMARY
Since KSnapshot has been replaced by Spectacle, the narration in the image shown could be updated

STEPS TO REPRODUCE
1. Open kcmshell5 kcmkwineffects
2. Show internal Desktop Effects
3. In the Appearance section, scroll down to Screenshot

OBSERVED RESULT
The description under Screenshot is "Helper effect for KSnapshot"


EXPECTED RESULT
KSnapshot shouldn't be mentioned since Spectacle is now the screenshot tool.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 19.04
(available in About System)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.2

ADDITIONAL INFORMATION
Also seen in 
Operating System: Fedora 30
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.1
Kernel Version: 5.1.6-300.fc30.x86_64
Comment 1 Vlad Zahorodnii 2019-06-07 08:59:34 UTC
Perhaps we should not mention any application names in the description.

It's worth to point out that the snapshot effect is quite generic, it's not bounded to Spectacle, other applications can you use it too, e.g. recently I discovered that GIMP uses this effect for the color picker tool.
Comment 2 DemonicSavage 2019-06-09 20:05:17 UTC
https://phabricator.kde.org/D21700

I have submitted a fix.
Comment 3 Nate Graham 2019-06-10 15:05:19 UTC
Git commit 92d482b3315baa92ac2a9cf0fdd5180fb755e5ff by Nate Graham, on behalf of Gabriel Felipe Huwe.
Committed on 10/06/2019 at 14:48.
Pushed by ngraham into branch 'master'.

[effects/screenshot] Remove outdated reference to KSnapshot

Summary:
Since KSnapshot is no longer used, I modified the text in `effect_builtins.cpp` to reflect that, changing it to a generic "screenshot tools".
FIXED-IN: 5.17.0

Reviewers: #kwin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: filipf, davidedmundson, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D21700

M  +1    -1    effects/effect_builtins.cpp

https://commits.kde.org/kwin/92d482b3315baa92ac2a9cf0fdd5180fb755e5ff